[package]
name = "tauri2-openssl"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri2_openssl_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
futures = "0.3.30"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.81"
regex = "1.10"
once_cell = "1.19"
axum = { version = "0.7.0" }
async-graphql = { version = "7.0", features= ["dynamic-schema"] }
async-graphql-axum = "7.0"
tower-http = { version = "0.5.0", features = ["cors"] }
arc-swap = "1.7.0"
